--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,1 +1,13 @@
 p= link_to 'Ask question', new_question_path
+
+table
+  thead
+    tr
+      th
+        | Title
+  tbody
+    - @questions.each do |question|
+      tr
+        td =question.title
+        td =link_to 'Show', question
+
