--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,15 +1,7 @@
-p= link_to 'Ask question', new_question_path
+.questions
+  - @questions.each do |question|
+    div id="question_#{question.id}"
+      = link_to question.title, question
 
-table
-  thead
-    tr
-      th
-        | Title
-  tbody
-    - @questions.each do |question|
-      tr
-        td= link_to (question) do
-          h4= question.title
-        end
-
+p = link_to 'Ask question', new_question_path
 
