--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,7 +1,4 @@
-= form_for @question do |f|
- = f.label :title
- = f.text_field :title
- = f.label :body
- = f.text_area :body
- = f.submit 'Create'
-end
+
+=render 'common/errors', resourse: @question
+
+=render 'form'
