--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,6 +1,7 @@
 = form_for [@question, @answer] do |f|
   =render 'common/errors', resourse: @answer
-
+  p
   = f.label :body
   = f.text_area :body
-  = f.submit
+  p
+  = f.submit t('.submit')
