--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,10 +1,10 @@
 h2
-  | Change your password
+  = t('.password_change')
 = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
   = f.hidden_field :reset_password_token
   .field
-    = f.label :password, "New password"
+    = f.label :password, t('.password')
     br
     - if @minimum_password_length
       em
@@ -14,7 +14,7 @@ h2
       br
     = f.password_field :password, autofocus: true, autocomplete: "off"
   .field
-    = f.label :password_confirmation, "Confirm new password"
+    = f.label :password_confirmation, t('.password_confirmation')
     br
     = f.password_field :password_confirmation, autocomplete: "off"
   .actions
