--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -5,10 +5,10 @@
   = link_to t('.forgotPassword'), new_password_path(resource_name)
   br
 - if devise_mapping.confirmable? && controller_name != 'confirmations'
-  = link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name)
+  = link_to t('.didnotRecInstructions'), new_confirmation_path(resource_name)
   br
 - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
-  = link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name)
+  = link_to t('.didnotReceiveUnlockInstructions'), new_unlock_path(resource_name)
   br
 - if devise_mapping.omniauthable?
   - resource_class.omniauth_providers.each do |provider|
