--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -3,5 +3,5 @@
     div id="question_#{question.id}"
       = link_to question.title, question
 
-p = link_to 'Ask question', new_question_path
+p = link_to t('.ask'), new_question_path
 
