--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,17 +1,17 @@
 doctype html
-html lang="en"
+html lang="ru"
   head
     title
-      | Hello
+      = t('.hello')
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   body
     - if current_user.present?
-      = link_to 'Sign out', destroy_user_session_path, method: :delete
+      = link_to t('.signOut'), destroy_user_session_path, method: :delete
     - else
-      = link_to 'Sign in', new_user_session_path
-      = link_to 'Registration', new_user_registration_path
+      = link_to t('.signIn'), new_user_session_path
+      = link_to t('.registration'), new_user_registration_path
 
     = flash[:notice] if flash[:notice]
     = flash[:alert] if flash[:alert]
