--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,4 +1,5 @@
-h1
-  = @question.title
-p
-= @question.body
+div id="question_#{question.id}"
+  h1
+    = @question.title
+  p
+    = @question.body
