--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,11 +1,12 @@
 p
 .question
   = render @question
+  - if user_signed_in? && current_user.author_of?(@question)
+  p
+    = link_to I18n.t('activerecord.attributes.question.delete'), question_path(@question), method: :delete
+  p
 .answers
   = render @question.answers
 
-- if user_signed_in? && current_user.author_of?(@question)
-  p
-    = link_to 'Delete', question_path(@question), method: :delete
-  p
+
 = render partial: 'answers/form', q: @question
