--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for [@question, @answer] do |f|
+= form_for [@question, @answer], remote: true do |f|
   =render 'common/errors', resourse: @answer
   p
   = f.label :body
