feature answer js

--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,6 +1,6 @@
 <% if @answer.errors.present? %>
-  $('.errors').append("<%= j render 'common/errors', object: @answer %>");
+  $('.errors').append('<%= j render "common/errors", resourse: @answer %>').appendTo(".errors");
 <% else %>
-  $('.answers').append("<%= j 'answer', answer: @answer %>");
+  $('.answers').append('<%= j render "answer", answer: @answer %>');
   $('#answer_body').val('');
 <% end %>
