answer js test, edit js

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -3,4 +3,9 @@
     = answer.body
     .links
       - if user_signed_in? && current_user.author_of?(answer)
+        = link_to 'Edit'
+        = form_for [answer], remote: true do |f|
+          = f.label :body, 'Answer'
+          = f.text_area :body
+          = f.submit 'Save'
         = link_to I18n.t('activerecord.attributes.answer.delete'), answer, method: :delete
