--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -1,5 +1,10 @@
+$(".errors").empty();
+$(".alert").remove();
 <% if @answer.errors.present? %>
   $('.errors').append('<%= j render "common/errors", resourse: @answer %>').appendTo(".errors");
 <% else %>
-  $('.answers').append('<%= j render "answer", answer: @answer %>');
+  debbuger();
+  $('#<%= answer__id(@answer) %>').replaceWith("<%= j render @answer %>");
+  $('edit-answer-<%= @answer.id %>').hide();
+  $('.edit-answer-link').show();
 <% end %>
