--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -3,10 +3,10 @@
     = answer.body
     .links
       - if user_signed_in? && current_user.author_of?(answer)
-        = link_to 'Edit','', class: 'edit-answer-link', data: { answer_id: answer.id }
+        = link_to I18n.t('answers.form.edit'),'', class: 'edit-answer-link', data: { answer_id: answer.id }
         p
           = form_for answer, remote: true, html: { id: "edit-answer-#{answer.id}"} do |f|
-            = f.label :body, 'Answer'
+            = f.label :body, I18n.t('activerecord.models.answer')
             = f.text_area :body
-            = f.submit 'Save'
+            = f.submit I18n.t('answers.form.edit_save')
         = link_to I18n.t('activerecord.attributes.answer.delete'), answer, method: :delete, remote:true
