--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,10 +5,10 @@ p
   - if user_signed_in? && current_user.author_of?(@question)
       p
         = form_for @question, remote: true, html: { id: "edit-question-#{@question.id}"} do |f|
-          = f.label :body, 'Question'
+          = f.label :body, I18n.t('activerecord.models.question')
           = f.text_area :body
-          = f.submit 'Save'
-      = link_to 'Edit', '', class: 'edit-question-link', data: { question_id: @question.id }
+          = f.submit I18n.t('questions.form.edit_save')
+      = link_to I18n.t('questions.form.edit'), '', class: 'edit-question-link', data: { question_id: @question.id }
       = link_to I18n.t('activerecord.attributes.question.delete'), question_path(@question), method: :delete
   p
 .answers
