--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -9,4 +9,5 @@
             = f.label :body, I18n.t('activerecord.models.answer')
             = f.text_area :body
             = f.submit I18n.t('answers.form.edit_save')
+        = link_to (answer.best? ? 'Revert' : 'Best answer'),'',class: 'Best', remote: true
         = link_to I18n.t('activerecord.attributes.answer.delete'), answer, method: :delete, remote:true
