bets answer green

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,7 +4,7 @@
     .links
       - if user_signed_in?
         - if current_user.author_of?(answer.question)
-          = link_to (answer.best? ? 'Revert' : 'Best answer'),'',class: 'select-best-answer', data: { answer_id: answer.id }
+          = link_to (answer.best? ? 'Revert' : 'Best answer'),set_best_answer_path(answer),class: 'select-best-answer', remote:true, method: :patch
         - if current_user.author_of?(answer)
           = link_to I18n.t('answers.form.edit'),'', class: 'edit-answer-link', data: { answer_id: answer.id }
           p
@@ -12,8 +12,5 @@
               = f.label :body, I18n.t('activerecord.models.answer')
               = f.text_area :body
               = f.submit I18n.t('answers.form.edit_save')
-          = link_to I18n.t('activerecord.attributes.answer.delete'), set_best_answer_path(answer), method: :patch, remote: true, class: 'warning button'
-
-
-
+          = link_to I18n.t('activerecord.attributes.answer.delete'), answer, method: :delete, remote:true
 
