--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -3,6 +3,6 @@ $(".alert").remove();
 <% if @answer.errors.present? %>
   $('.errors').append('<%= j render "common/errors", resourse: @answer %>').appendTo(".errors");
 <% else %>
-  $('.answers').append('<%= j render "answer", answer: @answer %>');
+  $('.answers').append('<%= j render @answer %>');
   $('textarea#answer_body').val('');
 <% end %>
