--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -3,7 +3,7 @@ $(".alert").remove();
 <% if @answer.errors.present? %>
   $('.errors').append('<%= j render "common/errors", resourse: @answer %>').appendTo(".errors");
 <% else %>
-  $("#answer_<%=@answer.id %>").replaceWith("<%= j render 'answer', answer: @answer %>");
+  $("#answer_<%=@answer.id %>").replaceWith("<%= j render @answer %>");
   $('form#edit-answer-<%= @answer.id %>').hide();
   $('.edit-answer-link').show();
 <% end %>
