--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -4,7 +4,7 @@ $(".alert").remove();
   $('.errors').append('<%= j render "common/errors", resourse: @question %>').appendTo(".errors");
 <% else %>
   console.log('Edit Question');
-  $("#question_<%=@question.id %>").replaceWith("<%= j render 'question', question: @question %>");
+  $("#question_<%=@question.id %>").replaceWith("<%= j render @question %>");
   $('form#edit-question-<%= @question.id %>').hide();
   $('.edit-question-link').show();
 <% end %>
