--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -6,5 +6,11 @@
   p
     = f.label :body
     = f.text_area :body
+    .attachments
+      = f.fields_for :attachments do |a|
+        = render 'attachments/attachment_fields', f: a
+      .add-file
+        = link_to_add_association 'Add file', f, :attachments, partial: 'attachments/attachment_fields'
+
   p
     = f.submit t('.submit')
