--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,7 +1,8 @@
 .errors
 p
 .question
-  = render @question
+  .question_attachment
+  = render 'question_with_attachments'
   - if user_signed_in? && current_user.author_of?(@question)
       p
         = form_for @question, remote: true, html: { id: "edit-question-#{@question.id}"} do |f|
