--- a/app/views/attachments/_attachment_fields.html.slim
+++ b/app/views/attachments/_attachment_fields.html.slim
@@ -5,4 +5,4 @@
   - else
     p
       = f.object.file.filename
-      = link_to_remove_association "Remove file", f
+      = link_to_remove_association I18n.t('questions.form.delete_file'), f
