--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @question do |f|
+= form_for @question, remote: @question.persisted? ? true : false do |f|
   =render 'common/errors', resourse: @question
   p
     = f.label :title
