--- a/app/views/questions/_question_with_attachments.html.slim
+++ b/app/views/questions/_question_with_attachments.html.slim
@@ -1,4 +1,10 @@
 = render @question
 - if @question.attachments.exists?
-  = render @question.attachments
+     ul.attachments
+      - @question.attachments.each do |attach|
+        li id="attachment_#{attach.id}"
+           = link_to attach.file.filename, attach.file.url
+           = link_to t('questions.form.delete_file'), attach, method: 'delete', remote: true, class: 'remove_file_field'
+
+
 
