--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -7,10 +7,6 @@
     = f.label :body
     = f.text_area :body
     .attachments
-      = f.fields_for :attachments do |a|
-        = render 'attachments/attachment_fields', f: a
-      .add-file
-        = link_to_add_association I18n.t('questions.form.add_file'), f, :attachments, partial: 'attachments/attachment_fields'
-
+      = render 'attachments/form', f: f
   p
     = f.submit t('.submit')
