--- a/app/views/attachments/_attachment_fields.html.slim
+++ b/app/views/attachments/_attachment_fields.html.slim
@@ -1,5 +1,4 @@
 .nested-fields
   = f.label :file
   = f.file_field :file
-  = link_to I18n.t('questions.form.delete_file'), '', class: 'remove_file_field'
-
+  = link_to_remove_association I18n.t('questions.form.delete_file'), f
