--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -3,7 +3,7 @@
   p
   = f.label :body
   = f.text_area :body
-
-  = render 'attachments/form', f: f
+  .attachments
+    = render 'attachments/form', f: f
   p
   = f.submit t('.submit')
