--- a/app/views/votes/_votes.html.slim
+++ b/app/views/votes/_votes.html.slim
@@ -1,12 +1,13 @@
-.total-vote
-  p =I18n.t('votes.form.total')
-  = votable.total
-.link-vote
-  ul
-    - if !current_user.voted?(votable)
-      li = link_to I18n.t('votes.form.like'), [:like, votable], method: :post, remote:true
-      li = link_to I18n.t('votes.form.dislike'), [:dislike, votable], method: :post, remote:true
+.voting
+	.votable-total id="votable-total-#{votable.id}"
+	  p =I18n.t('votes.form.total')
+	  = votable.total
+	.link-vote
 
-    - if current_user.voted?(votable)
-      li= link_to I18n.t('votes.form.change'), [:change_vote, votable], method: :patch, remote: true
-      li= link_to I18n.t('votes.form.cancel'), [:cancel_vote, votable], method: :delete, remote: true
+      ul id="votable-already-links-#{votable.id}" class=(current_user.voted?(votable) ? '' : 'hidden')
+        li= link_to I18n.t('votes.form.change'), [:change_vote, votable], method: :patch, remote: true
+        li= link_to I18n.t('votes.form.cancel'), [:cancel_vote, votable], method: :delete, remote: true
+
+      ul id="votable-not-yet-links-#{votable.id}" class=(current_user.voted?(votable) ? 'hidden' : '')
+        li= link_to I18n.t('votes.form.like'), [:like, votable], method: :post, remote: true
+        li= link_to I18n.t('votes.form.dislike'), [:dislike, votable], method: :post, remote: true
