--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -12,8 +12,9 @@ p
           = f.label :body, I18n.t('activerecord.models.question')
           = f.text_area :body
           = f.submit I18n.t('questions.form.edit_save')
-      = link_to I18n.t('questions.form.edit'), '', class: 'edit-question-link', data: { question_id: @question.id }
-      = link_to I18n.t('activerecord.attributes.question.delete'), question_path(@question), method: :delete
+      .question_links
+        = link_to I18n.t('questions.form.edit'), '', class: 'edit-question-link', data: { question_id: @question.id }
+        = link_to I18n.t('activerecord.attributes.question.delete'), question_path(@question), method: :delete
   p
 .answers
   = render @question.answers
