--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,7 @@ html lang="ru"
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = action_cable_meta_tag
     = csrf_meta_tags
+    = Gon::Base.render_data
   body
     - if current_user.present?
       = link_to t('.signOut'), destroy_user_session_path, method: :delete
