--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,11 +3,11 @@ html lang="ru"
   head
     title
       = t('.hello')
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = include_gon
     = action_cable_meta_tag
     = csrf_meta_tags
-    = Gon::Base.render_data
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
   body
     - if current_user.present?
       = link_to t('.signOut'), destroy_user_session_path, method: :delete
