--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,9 +1,9 @@
 $(".errors").empty();
 $(".alert").remove();
-debugger;
-comments_selector = "#comments-<%=@comment.commentable_type.underscore%>-<%=@comment.commentable_id%>"
-<% if @object.errors.present? %>
-  $('.errors').append('<%= j render "common/errors", resourse: @object %>').appendTo(".errors");
+comments_selector = ".<%=@comment.commentable_type.underscore%>_comments"
+<% if @comment.errors.present? %>
+  $('.errors').append('<%= j render "common/errors", resourse: @comment %>').appendTo(".errors");
 <% else %>
-  $('.answers').append("<%= j render @object %>");
-$('textarea#answer_body').val('');
+  $(comments_selector).append("<%= j render @comment %>");
+<% end %>
+$('textarea#comment_body').val('');
