refactoring actionCable - comments

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,8 +2,9 @@
   div id="answer_#{answer.id}"
     p = answer.body
     - if user_signed_in?
-      .answer_comments id="answer_#{answer.id}"
-        = render partial: 'comments/form', locals: { commentable: answer }
+      .answer_comments
+        div id="add-comment-to-answer-#{answer.id}"
+          = render partial: 'comments/form', locals: { commentable: answer }
     -if @answer.comments.any?
       = render @answer.comments
     - if answer.attachments.exists?
