--- a/app/views/votes/_votes.html.slim
+++ b/app/views/votes/_votes.html.slim
@@ -4,10 +4,10 @@
 	  = votable.total
 	.link-vote
 
-      ul id="#{votable.class.to_s.downcase}-votable-already-links-#{votable.id}" class=(current_user.voted?(votable) ? '' : 'hidden')
+      ul id="#{votable.class.to_s.downcase}-votable-already-links-#{votable.id}" class=(can?(:vote_up, votable) ? '' : 'hidden')
         li= link_to I18n.t('votes.form.change'), [:change_vote, votable], method: :patch, remote: true
         li= link_to I18n.t('votes.form.cancel'), [:cancel_vote, votable], method: :delete, remote: true
 
-      ul id="#{votable.class.to_s.downcase}-votable-not-yet-links-#{votable.id}" class=(current_user.voted?(votable) ? 'hidden' : '')
+      ul id="#{votable.class.to_s.downcase}-votable-not-yet-links-#{votable.id}" class=(can?(:vote_down, votable) ? 'hidden' : '')
         li= link_to I18n.t('votes.form.like'), [:like, votable], method: :post, remote: true
         li= link_to I18n.t('votes.form.dislike'), [:dislike, votable], method: :post, remote: true
