--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,7 @@ html lang="ru"
     = include_gon
     = action_cable_meta_tag
     = csrf_meta_tags
+    meta name="google-site-verification" content="ZByo7u9h3YFG-f0V-y1b_aN7-FfKs-AyWOKZbtCDQcM"
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
   body
