--- a/app/views/questions/_question_with_attachments.html.slim
+++ b/app/views/questions/_question_with_attachments.html.slim
@@ -3,5 +3,6 @@
      ul.attachments
       - @question.attachments.each do |attach|
         li id="attachment_#{attach.id}"
-           = link_to attach.file.filename, attach.file.url
-           = link_to I18n.t('questions.form.delete_file'), attach, method: 'delete', remote: true, class: 'remove_file_field' if can?(:destroy, @question)
+          - cache attach do
+            = link_to attach.file.filename, attach.file.url
+          = link_to I18n.t('questions.form.delete_file'), attach, method: 'delete', remote: true, class: 'remove_file_field' if can?(:destroy, @question)
